# SkateFormer

./: .gitignore  main.py  pyproject.toml
newconfig/: stableunstable_train.yaml
